# iso-kit

./: package.json  tailwind.config.js
components/: Spinner.tsx
helpers/: fileLoader.ts  statusColor.ts
pages/: index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: convert2god.rs  ftp_handler.rs  main.rs
src-tauri/src/iso2god/: unity.rs
src-tauri/src/iso2god/god/: con_header.rs  file_layout.rs
stores/: FtpStore.ts  Store.ts
