[package]
name = "app"
version = "0.1.0"
description = "A toolbox for transforming xbox 360 iso disk images"
authors = ["Andre Cox"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.3", features = [] }

[dependencies]
tauri = { version = "1.0.3", features = ["api-all"] }
anyhow = { version = "1.0.59", features = ["backtrace"] }
bitflags = "1.3.2"
byteorder = "1.4.3"
clap = { version = "3.2.16", features = ["derive"] }
hex = "0.4.3"
num = "0.4.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.141", features = ["derive"] }
serde-aux = "3.1.0"
serde_json = "1.0.82"
sha1 = "0.10.1"
ftp =  "3.0.1" 

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
